<resources>
    <string name="app_name">Я.Галерея</string>
    <string name="upload_description">Выбирете фотографию из своей Галереи</string>
    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>
    <string name="about_app">О приложении</string>
    <string name="app_title">Я.Галерея</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="logout_dialog_title">Выйти из учётной записи?</string>
    <string name="logout_dialog_message">Приложение будет закрыто</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete">Удалить</string>
    <string name="selection_placeholder">Выбрано %1$s</string>
    <string name="delete_dialog_title">Удалить фотографии?</string>
    <string name="delete_dialog_message">Все фотографии будут перемещены в корзину</string>
    <string name="share">Поделиться</string>
    <string name="deleting_error">При удалении возникла ошибка</string>
    <string name="successful_uploading">Фото успешно загружено</string>
    <string name="uploading_name_conflict">Фото с таким именем уже существует</string>
    <string name="moved_to_trash">Фотографии успешно перемещены в корзину</string>
    <string name="open_gallery">Открыть галерею</string>
    <string name="slider_position">%1$d из %2$d</string>
    <string name="add_new_photo">Добавить новое фото</string>
    <string name="uploading">Загрузка</string>
    <string name="error">Ошибка, проверьте своё интернет соединения</string>
    <string name="share_images_to">Отправить картинки в..</string>
    <string name="wait_upload">Подождите</string>
    <string name="wait_for_load">Подождите, картинка загружается</string>
    <string name="load_soon">Загрузка скоро начнётся</string>
    <string name="select_photo">Выберете фотографию..</string>
    <string name="about_description">Тестовое задание в школу мобильной разработки Яндекса</string>
    <string name="me">Roman Anchugov</string>
    <string name="storage_occupation">Занято</string>
    <string name="storage_info">Память</string>
    <string name="pick_image_from_gallery">Вы должны выбрать фотографию из галереии</string>
    <string name="overall_storage">Общий объём</string>
    <string name="trash">Корзина</string>
    <string name="clear_trash">Очистить корзину</string>
    <string name="restore">Восстановить файлы из корзины</string>
    <string name="successful_trash_clear">Корзина успешно очищена</string>
    <string name="restore_photos">Восстановить фото</string>
    <string name="successful_restored_trash">Все фотографии успешно восстановленны</string>
    <string name="attention">Внимание</string>
    <string name="forever_dialog_description">Все файлы будут безвозвратно удалены</string>
    <string name="trash_is_empty">Фотографий в корзине нет</string>
    <string name="disk_api_link"><a href="https://tech.yandex.ru/disk/">Выполненно при помощи Яндекс.Диск api</a></string>
    <string name="empty_trash">Фотографий в корзине нет</string>
    <string name="gallery_load_wait">Галерея загружается, подождите</string>
    <string name="you_should_login">Вы должны войти в учётную запись Яндекс</string>
    <string name="sign_in">Войти</string>
    <string name="toggle_slider_bg">Поменять фон</string>
</resources>
