<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/overall_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/overall_storage"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <LinearLayout
            android:id="@+id/bars_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/overall_header"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/storage_info_pb"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    app:arc_bottom_text="@string/storage_occupation"
                    app:arc_bottom_text_size="16sp"
                    app:arc_finished_color="@color/yellow"
                    app:arc_unfinished_color="@color/blue"
                    app:arc_text_color="@color/blue" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.github.lzyzsd.circleprogress.ArcProgress
                    android:id="@+id/trash_info_pb"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    app:arc_bottom_text="@string/trash"
                    app:arc_bottom_text_size="16sp"
                    app:arc_finished_color="@color/yellow"
                    app:arc_unfinished_color="@color/blue"
                    app:arc_text_color="@color/blue"/>
            </RelativeLayout>
        </LinearLayout>

        <View
            android:id="@+id/info_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"
            android:layout_below="@id/bars_container"/>

        <TextView
            android:id="@+id/trash_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/info_divider"
            android:layout_marginTop="10dp"
            android:text="@string/empty_trash"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/trash_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trash_status"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            style="?android:attr/buttonBarStyle"
            android:padding="10dp">

            <Button
                android:id="@+id/clear_trash_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:text="@string/clear_trash"
                android:textColor="@android:color/black"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginEnd="5dp"/>

            <Button
                android:id="@+id/restore_trash_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/restore_photos"
                android:textColor="@android:color/white"
                android:background="@color/blue"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"
            android:layout_below="@id/trash_clear"/>

    </RelativeLayout>

</ScrollView>